Add server-authoritative-movement to nukkit.yml

--- a/src/main/resources/default-nukkit.yml
+++ b/src/main/resources/default-nukkit.yml
@@ -66,6 +66,7 @@ player:
  skin-change-cooldown: 30
  force-skin-trusted: false
  check-movement: true
+ server-authoritative-movement: false
 
 aliases:
 
