--- a/src/main/resources/default-nukkit.yml
+++ b/src/main/resources/default-nukkit.yml
@@ -67,6 +67,7 @@ player:
  force-skin-trusted: false
  check-movement: true
  server-authoritative-movement: false
+ max-destroy-block-per-client-tick: -1
 
 aliases:
 
